--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a9a460">  <td>23/08/24 21:13:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RestAPITesting.addBooks()[pri:1, instance:ToolsQA.RestApi.tests.RestAPITesting@6fcd31c3]">addBooks</td> 
-  <td>main@630949334</td>   <td></td> </tr>
-<tr bgcolor="a9a460">  <td>23/08/24 21:13:00</td>   <td>-910</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RestAPITesting.getBooks()[pri:0, instance:ToolsQA.RestApi.tests.RestAPITesting@6fcd31c3]">getBooks</td> 
-  <td>main@630949334</td>   <td></td> </tr>
+<tr bgcolor="95939e">  <td>23/09/25 18:09:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EndToEndTest.addBooks()[pri:4, instance:ToolsQA.RestApi.tests.EndToEndTest@f107c50]">addBooks</td> 
+  <td>main@212011969</td>   <td></td> </tr>
+<tr bgcolor="95939e">  <td>23/09/25 18:09:05</td>   <td>-3803</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EndToEndTest.createUserToAccess()[pri:1, instance:ToolsQA.RestApi.tests.EndToEndTest@f107c50]">createUserToAccess</td> 
+  <td>main@212011969</td>   <td></td> </tr>
+<tr bgcolor="95939e">  <td>23/09/25 18:09:08</td>   <td>-1393</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EndToEndTest.generateToken()[pri:2, instance:ToolsQA.RestApi.tests.EndToEndTest@f107c50]">generateToken</td> 
+  <td>main@212011969</td>   <td></td> </tr>
+<tr bgcolor="95939e">  <td>23/09/25 18:09:09</td>   <td>-565</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EndToEndTest.getBooks()[pri:3, instance:ToolsQA.RestApi.tests.EndToEndTest@f107c50]">getBooks</td> 
+  <td>main@212011969</td>   <td></td> </tr>
 </table>
