--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,14 +8,12 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">4,459</td><td></td><td></td></tr>
+<tr><th colspan="7">Suite</th></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">49</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">ToolsQA.RestApi.tests.EndToEndTest</td><td><a href="#m0">addBooks</a></td><td rowspan="1">1695645549599</td><td rowspan="1">634</td></tr><tr class="passedeven"><td><a href="#m1">createUserToAccess</a></td><td rowspan="1">1695645545796</td><td rowspan="1">2407</td></tr><tr class="passedeven"><td><a href="#m2">generateToken</a></td><td rowspan="1">1695645548206</td><td rowspan="1">826</td></tr><tr class="passedeven"><td><a href="#m3">getBooks</a></td><td rowspan="1">1695645549034</td><td rowspan="1">564</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">TestNG.tests.AnnotationClasses</td><td><a href="#m0">SendOTPTestclassAMethod3</a></td><td rowspan="1">1697039099476</td><td rowspan="1">6</td></tr><tr class="passedeven"><td><a href="#m1">resetPasswordTestClassAMethod2</a></td><td rowspan="1">1697039099491</td><td rowspan="1">3</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">ToolsQA.RestApi.tests.EndToEndTest#addBooks</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">ToolsQA.RestApi.tests.EndToEndTest#createUserToAccess</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">ToolsQA.RestApi.tests.EndToEndTest#generateToken</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">ToolsQA.RestApi.tests.EndToEndTest#getBooks</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">TestNG.tests.AnnotationClasses#SendOTPTestclassAMethod3</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">TestNG.tests.AnnotationClasses#resetPasswordTestClassAMethod2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
