--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,26 +4,22 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>ToolsQA.RestApi.tests.EndToEndTest</td>
+<td>TestNG.tests.ClassB</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>getBooks</td>
+<td>loginPageTestClassBMethod1</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>addBooks</td>
+<td>SendOTPTestclassBMethod3</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>generateToken</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>createUserToAccess</td>
+<td>resetPasswordTestClassBMethod2</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
