--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,6 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b1f3ab">  <td>23/09/23 18:56:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Books.getBooks()[pri:3, instance:ToolsQA.RestApi.tests.Books@119cbf96]">getBooks</td> 
-  <td>main@20111564</td>   <td></td> </tr>
+<tr bgcolor="f6626a">  <td>23/10/11 21:14:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AnnotationClasses.SendOTPTestclassAMethod3()[pri:0, instance:TestNG.tests.AnnotationClasses@1efe439d]">SendOTPTestclassAMethod3</td> 
+  <td>main@1942828992</td>   <td></td> </tr>
+<tr bgcolor="f6626a">  <td>23/10/11 21:14:59</td>   <td>19</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AnnotationClasses.afterClass()[pri:0, instance:TestNG.tests.AnnotationClasses@1efe439d]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1942828992</td>   <td></td> </tr>
+<tr bgcolor="f6626a">  <td>23/10/11 21:14:59</td>   <td>9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AnnotationClasses.afterMethod()[pri:0, instance:TestNG.tests.AnnotationClasses@1efe439d]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1942828992</td>   <td></td> </tr>
+<tr bgcolor="f6626a">  <td>23/10/11 21:14:59</td>   <td>19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AnnotationClasses.afterMethod()[pri:0, instance:TestNG.tests.AnnotationClasses@1efe439d]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1942828992</td>   <td></td> </tr>
+<tr bgcolor="f6626a">  <td>23/10/11 21:14:59</td>   <td>131</td> <td title="&lt;&lt;AnnotationClasses.afterSuite()[pri:0, instance:TestNG.tests.AnnotationClasses@1efe439d]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1942828992</td>   <td></td> </tr>
+<tr bgcolor="f6626a">  <td>23/10/11 21:14:59</td>   <td>19</td> <td>&nbsp;</td><td title="&lt;&lt;AnnotationClasses.afterTest()[pri:0, instance:TestNG.tests.AnnotationClasses@1efe439d]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1942828992</td>   <td></td> </tr>
+<tr bgcolor="f6626a">  <td>23/10/11 21:14:59</td>   <td>-13</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AnnotationClasses.beforeClass()[pri:0, instance:TestNG.tests.AnnotationClasses@1efe439d]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1942828992</td>   <td></td> </tr>
+<tr bgcolor="f6626a">  <td>23/10/11 21:14:59</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AnnotationClasses.beforeMethod()[pri:0, instance:TestNG.tests.AnnotationClasses@1efe439d]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1942828992</td>   <td></td> </tr>
+<tr bgcolor="f6626a">  <td>23/10/11 21:14:59</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AnnotationClasses.beforeMethod()[pri:0, instance:TestNG.tests.AnnotationClasses@1efe439d]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1942828992</td>   <td></td> </tr>
+<tr bgcolor="f6626a">  <td>23/10/11 21:14:59</td>   <td>-33</td> <td title="&gt;&gt;AnnotationClasses.beforeSuite()[pri:0, instance:TestNG.tests.AnnotationClasses@1efe439d]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1942828992</td>   <td></td> </tr>
+<tr bgcolor="f6626a">  <td>23/10/11 21:14:59</td>   <td>-25</td> <td>&nbsp;</td><td title="&gt;&gt;AnnotationClasses.beforeTest()[pri:0, instance:TestNG.tests.AnnotationClasses@1efe439d]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1942828992</td>   <td></td> </tr>
+<tr bgcolor="f6626a">  <td>23/10/11 21:14:59</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AnnotationClasses.resetPasswordTestClassAMethod2()[pri:1, instance:TestNG.tests.AnnotationClasses@1efe439d]">resetPasswordTestClassAMethod2</td> 
+  <td>main@1942828992</td>   <td></td> </tr>
 </table>
